# DarkCloudOS

./: CNAME  index.html  script.js  style.css
DevOS/core/: ai_integrator.py  application.py  devos_ai.py  devos_app.py  devos_app2.py  devos_blockchain.py  devos_builder.py  devos_cicd.py  devos_cloud.py  devos_dashboard.py  devos_docs.py  devos_embedded.py  devos_frameworks.py  devos_gui.py  devos_java.py  devos_linux.py  devos_main.py  devos_monitoring.py  devos_platform_generic.py  devos_platform_linux.py  devos_platform_macos.py  devos_platform_windows.py  devos_python.py  devos_resource_loader.py  devos_resources.py  devos_resources_index.py  devos_security.py  devos_tracker.py  devos_ttoolkit.py  devos_windows.py  main.py  profiler.py  project_manager.py  system.py
DevOS/core/core/: __init__.py  auth_manager.py  collaboration.py  debugger.py  error_handler.py  git_integration.py  knowledge_base.py  metrics_monitor.py  notification.py  project.py  system_scanner.py  vcs.py
DevOS/core/integrations/: github.py
DevOS/core/modules/: __init__.py  ai_assistant.py  frameworks.py  hardware.py  react_manager.py
DevOS/core/modules/frameworks/: react_manager.py
DevOS/core/ui/: __init__.py  docker.py  git_history_viewer.py  login_screen.py  main_window.py  service_login.py  service_manager.py  settings_dialog.py
DevOS/core/ui/components/: __init__.py  code_editor.py  tooltip.py  (+4 more)
Monacode-Toolkit/: .gitignore  package.json  pyproject.toml
Monacode-Toolkit/src/monacode/: App.tsx  __init__.py  cli.py  git.py  init.py  llm.py  updater.py  utils.py
public/: index.html
